--- a/x_customizer.html
+++ b/x_customizer.html
@@ -33,13 +33,99 @@
         .custom-file-upload:hover {
             background-color: #e5e7eb; /* bg-gray-200 */
         }
+        /* Dark theme styles */
+        body.dark {
+            background-color: #15202b; /* Twitter-like dark background */
+        }
+        body.dark .bg-white {
+            background-color: #1e2a3c; /* Darker panel background */
+            border-color: #2f3b4c;
+        }
+        body.dark .bg-gray-100 {
+            background-color: #15202b;
+        }
+        body.dark .text-gray-900 {
+            color: #e7e9ea; /* Light text for dark mode */
+        }
+        body.dark .text-gray-700 {
+            color: #d1d5db; /* Lighter gray for labels */
+        }
+        body.dark .text-gray-500 {
+            color: #6b7280; /* Slightly lighter gray for secondary text */
+        }
+        body.dark .border-gray-300 {
+            border-color: #4b5563;
+        }
+        body.dark .border-gray-200 {
+            border-color: #2f3b4c;
+        }
+        body.dark .border-gray-100 {
+            border-color: #2f3b4c;
+        }
+        body.dark .focus\\:border-indigo-500:focus {
+            border-color: #3b82f6;
+        }
+        body.dark .focus\\:ring-indigo-500:focus {
+            --tw-ring-color: #3b82f6;
+        }
+        body.dark .bg-blue-600 {
+            background-color: #1d9bf0; /* Twitter blue */
+        }
+        body.dark .hover\\:bg-blue-700:hover {
+            background-color: #1a8cd8;
+        }
+        body.dark .bg-gray-500 {
+            background-color: #4b5563;
+        }
+        body.dark .hover\\:bg-gray-600:hover {
+            background-color: #6b7280;
+        }
+        body.dark .bg-purple-500 {
+            background-color: #8b5cf6;
+        }
+        body.dark .hover\\:bg-purple-600:hover {
+            background-color: #7c3aed;
+        }
+        body.dark .custom-file-upload {
+            background-color: #2f3b4c;
+            color: #d1d5db;
+            border-color: #4b5563;
+        }
+        body.dark .custom-file-upload:hover {
+            background-color: #374151; /* Slightly lighter on hover */
+        }
+        body.dark .hover\\:text-blue-500:hover {
+            color: #1d9bf0;
+        }
+        body.dark .hover\\:text-green-500:hover {
+            color: #22c55e;
+        }
+        body.dark .hover\\:text-red-500:hover {
+            color: #ef4444;
+        }
+        /* Verification badge style */
+        .verified-badge {
+            margin-left: 6px;
+            width: 18px;
+            height: 18px;
+        }
     </style>
 </head>
-<body class="bg-gray-100 flex flex-col lg:flex-row items-center lg:items-start justify-center min-h-screen p-4 space-y-8 lg:space-y-0 lg:space-x-8">
+<body class="bg-gray-100 flex flex-col lg:flex-row items-center lg:items-start justify-center min-h-screen p-4 space-y-8 lg:space-y-0 lg:space-x-8 transition-colors duration-200">
 
     <!-- Customization Form -->
     <div class="bg-white rounded-xl shadow-lg p-6 w-full max-w-md border border-gray-200 lg:sticky lg:top-4 lg:h-[calc(100vh-2rem)] lg:overflow-y-auto">
-        <h2 class="text-2xl font-bold text-gray-900 mb-6 text-center">Customize X Post</h2>
+        <div class="flex justify-between items-center mb-6">
+            <h2 class="text-2xl font-bold text-gray-900 text-center">Customize X Post</h2>
+            <button id="themeToggleBtn" class="p-2 rounded-full bg-gray-200 dark:bg-gray-700">
+                <svg id="sunIcon" class="w-6 h-6 text-gray-600 dark:hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+                </svg>
+                <svg id="moonIcon" class="w-6 h-6 text-gray-200 hidden dark:block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 01 8.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+                </svg>
+            </button>
+        </div>
 
         <div class="space-y-4">
             <div>
@@ -49,6 +135,10 @@
             <div>
                 <label for="inputHandle" class="block text-sm font-medium text-gray-700">Handle (@)</label>
                 <input type="text" id="inputHandle" value="FamousActorOfficial" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm p-2 border">
+            </div>
+            <div>
+                <label for="inputVerified" class="block text-sm font-medium text-gray-700">Verified Account</label>
+                <input type="checkbox" id="inputVerified" checked class="mt-1 h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
             </div>
             <div>
                 <label for="inputProfilePic" class="block text-sm font-medium text-gray-700 mb-1">Profile Picture</label>
@@ -102,7 +192,13 @@
             <div class="flex items-center">
                 <img id="profilePicPreview" src="https://placehold.co/48x48/000000/FFFFFF?text=FA" alt="Profile Picture" class="w-12 h-12 rounded-full mr-3 object-cover border border-gray-100">
                 <div>
-                    <span id="usernamePreview" class="font-bold text-gray-900 text-base">FamousActor</span>
+                    <div class="flex items-center">
+                        <span id="usernamePreview" class="font-bold text-gray-900 text-base">FamousActor</span>
+                        <svg id="verifiedBadge" class="verified-badge" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#1d9bf0" width="18" height="18">
+                            <circle cx="12" cy="12" r="10" fill="#1d9bf0"/>
+                            <path d="M9 12l2 2 4-4" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
                     <span id="handlePreview" class="text-gray-500 text-sm block">@FamousActorOfficial</span>
                 </div>
             </div>
@@ -138,40 +234,38 @@
             <div class="flex items-center space-x-1">
                 <!-- Likes Icon -->
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>
-                        <span id="likesCountPreview">150K</span>
-                    </div>
-                    <div class="flex items-center space-x-1">
-                        <!-- Views Icon (Updated to bar chart) -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-bar-chart-2">
-                            <line x1="18" x2="18" y1="20" y2="10"/>
-                            <line x1="12" x2="12" y1="20" y2="4"/>
-                            <line x1="6" x2="6" y1="20" y2="14"/>
-                        </svg>
-                        <span id="viewsCountPreview">5M</span>
-                    </div>
-                </div>
-
-                <!-- Action Buttons -->
-                <div class="flex justify-around text-gray-500">
-                    <button class="flex items-center space-x-1 hover:text-blue-500 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-message-circle"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/></svg>
-                    </button>
-                    <button class="flex items-center space-x-1 hover:text-green-500 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-repeat"><path d="M17 1l4 4-4 4"/><path d="M3 11v-1a4 4 0 0 1 4-4h14"/><path d="M7 23l-4-4 4-4"/><path d="M21 13v1a4 4 0 0 1-4 4H3"/></svg>
-                    </button>
-                    <button class="flex items-center space-x-1 hover:text-red-500 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>
-                    </button>
-                    <button class="flex items-center space-x-1 hover:text-blue-500 transition-colors">
-                        <!-- Share Icon (Updated to arrow-up-from-line) -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-arrow-up-from-line">
-                            <path d="M2 17h20"/>
-                            <path d="m18 10-6-6-6 6"/>
-                            <path d="M12 4v12"/>
-                        </svg>
-                    </button>
-                </div>
+                <span id="likesCountPreview">150K</span>
             </div>
+            <div class="flex items-center space-x-1">
+                <!-- Views Icon (Updated to bar chart) -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-bar-chart-2">
+                    <line x1="18" x2="18" y1="20" y2="10"/>
+                    <line x1="12" x2="12" y1="20" y2="4"/>
+                    <line x1="6" x2="6" y1="20" y2="14"/>
+                </svg>
+                <span id="viewsCountPreview">5M</span>
+            </div>
+        </div>
+
+        <!-- Action Buttons -->
+        <div class="flex justify-around text-gray-500">
+            <button class="flex items-center space-x-1 hover:text-blue-500 transition-colors">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-message-circle"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/></svg>
+            </button>
+            <button class="flex items-center space-x-1 hover:text-green-500 transition-colors">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-repeat"><path d="M17 1l4 4-4 4"/><path d="M3 11v-1a4 4 0 0 1 4-4h14"/><path d="M7 23l-4-4 4-4"/><path d="M21 13v1a4 4 0 0 1-4 4H3"/></svg>
+            </button>
+            <button class="flex items-center space-x-1 hover:text-red-500 transition-colors">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>
+            </button>
+            <button class="flex items-center space-x-1 hover:text-blue-500 transition-colors">
+                <!-- Share Icon (Updated to arrow-up-from-line) -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-arrow-up-from-line">
+                    <path d="M2 17h20"/>
+                    <path d="m18 10-6-6-6 6"/>
+                    <path d="M12 4v12"/>
+                </svg>
+            </button>
         </div>
     </div>
 
@@ -180,6 +274,7 @@
             // Get references to input elements
             const inputUsername = document.getElementById('inputUsername');
             const inputHandle = document.getElementById('inputHandle');
+            const inputVerified = document.getElementById('inputVerified');
             const inputProfilePic = document.getElementById('inputProfilePic');
             const inputPostText = document.getElementById('inputPostText');
             const inputImagePost = document.getElementById('inputImagePost');
@@ -189,10 +284,14 @@
             const inputViews = document.getElementById('inputViews');
             const inputTimestamp = document.getElementById('inputTimestamp');
             const generatePostBtn = document.getElementById('generatePostBtn');
+            const themeToggleBtn = document.getElementById('themeToggleBtn');
+            const sunIcon = document.getElementById('sunIcon');
+            const moonIcon = document.getElementById('moonIcon');
 
             // Get references to preview elements
             const usernamePreview = document.getElementById('usernamePreview');
             const handlePreview = document.getElementById('handlePreview');
+            const verifiedBadge = document.getElementById('verifiedBadge');
             const profilePicPreview = document.getElementById('profilePicPreview');
             const postTextPreview = document.getElementById('postTextPreview');
             const imagePostContainer = document.getElementById('imagePostContainer');
@@ -207,6 +306,7 @@
             const updatePostPreview = () => {
                 usernamePreview.textContent = inputUsername.value;
                 handlePreview.textContent = `@${inputHandle.value}`;
+                verifiedBadge.style.display = inputVerified.checked ? 'inline-block' : 'none';
                 postTextPreview.textContent = inputPostText.value;
                 commentsCountPreview.textContent = formatCount(parseInt(inputComments.value));
                 retweetsCountPreview.textContent = formatCount(parseInt(inputRetweets.value));
@@ -252,6 +352,29 @@
                     imagePostContainer.classList.add('hidden');
                 }
             });
+
+            // Handle verified checkbox
+            inputVerified.addEventListener('input', updatePostPreview);
+
+            // Theme toggle functionality
+            themeToggleBtn.addEventListener('click', () => {
+                document.body.classList.toggle('dark');
+                // Save theme preference to localStorage
+                if (document.body.classList.contains('dark')) {
+                    localStorage.setItem('theme', 'dark');
+                    verifiedBadge.setAttribute('fill', '#3b82f6');
+                } else {
+                    localStorage.setItem('theme', 'light');
+                    verifiedBadge.setAttribute('fill', '#1d9bf0');
+                }
+            });
+
+            // Load theme preference from localStorage
+            if (localStorage.getItem('theme') === 'dark' || 
+                (!localStorage.getItem('theme') && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+                document.body.classList.add('dark');
+                verifiedBadge.setAttribute('fill', '#3b82f6');
+            }
 
             // Event listener for the Generate Post button
             generatePostBtn.addEventListener('click', updatePostPreview);
