--- a/instagram_customizer.html
+++ b/instagram_customizer.html
@@ -33,13 +33,99 @@
         .custom-file-upload:hover {
             background-color: #e5e7eb; /* bg-gray-200 */
         }
+        /* Dark theme styles */
+        body.dark {
+            background-color: #ffffff; /* Instagram-like dark background */
+        }
+        body.dark .bg-white {
+            background-color: #1c1c1e; /* Darker panel background */
+            border-color: #2c2c2e;
+        }
+        body.dark .bg-gray-100 {
+            background-color: #121212;
+        }
+        body.dark .text-gray-900 {
+            color: #e7e9ea; /* Light text for dark mode */
+        }
+        body.dark .text-gray-800 {
+            color: #d1d5db;
+        }
+        body.dark .text-gray-700 {
+            color: #d1d5db; /* Lighter gray for labels */
+        }
+        body.dark .text-gray-600 {
+            color: #a1a1aa;
+        }
+        body.dark .text-gray-500 {
+            color: #6b7280; /* Slightly lighter gray for secondary text */
+        }
+        body.dark .text-gray-400 {
+            color: #71717a; /* Slightly lighter for time ago text */
+        }
+        body.dark .border-gray-300 {
+            border-color: #3f3f46;
+        }
+        body.dark .border-gray-200 {
+            border-color: #2c2c2e;
+        }
+        body.dark .border-gray-100 {
+            border-color: #2c2c2e;
+        }
+        body.dark .focus\\:border-indigo-500:focus {
+            border-color: #3b82f6;
+        }
+        body.dark .focus\\:ring-indigo-500:focus {
+            --tw-ring-color: #3b82f6;
+        }
+        body.dark .bg-blue-600 {
+            background-color: #0095f6; /* Instagram blue */
+        }
+        body.dark .hover\\:bg-blue-700:hover {
+            background-color: #0081d5;
+        }
+        body.dark .bg-gray-500 {
+            background-color: #4b5563;
+        }
+        body.dark .hover\\:bg-gray-600:hover {
+            background-color: #6b7280;
+        }
+        body.dark .bg-indigo-500 {
+            background-color: #5850ec;
+        }
+        body.dark .hover\\:bg-indigo-600:hover {
+            background-color: #4b46c8;
+        }
+        body.dark .custom-file-upload {
+            background-color: #2c2c2e;
+            color: #d1d5db;
+            border-color: #3f3f46;
+        }
+        body.dark .custom-file-upload:hover {
+            background-color: #3f3f46;
+        }
+        body.dark .hover\\:text-gray-900:hover {
+            color: #e7e9ea;
+        }
+        body.dark #blueTickPreview {
+            fill: #3b82f6; /* Slightly lighter blue for dark mode */
+        }
     </style>
 </head>
-<body class="bg-gray-100 flex flex-col lg:flex-row items-center lg:items-start justify-center min-h-screen p-4 space-y-8 lg:space-y-0 lg:space-x-8">
+<body class="bg-gray-100 flex flex-col lg:flex-row items-center lg:items-start justify-center min-h-screen p-4 space-y-8 lg:space-y-0 lg:space-x-8 transition-colors duration-200">
 
     <!-- Customization Form -->
     <div class="bg-white rounded-xl shadow-lg p-6 w-full max-w-md border border-gray-200 lg:sticky lg:top-4 lg:h-[calc(100vh-2rem)] lg:overflow-y-auto">
-        <h2 class="text-2xl font-bold text-gray-900 mb-6 text-center">Customize Instagram Post</h2>
+        <div class="flex justify-between items-center mb-6">
+            <h2 class="text-2xl font-bold text-gray-900 text-center">Customize Instagram Post</h2>
+            <button id="themeToggleBtn" class="p-2 rounded-full bg-gray-200 dark:bg-gray-700">
+                <svg id="sunIcon" class="w-6 h-6 text-gray-600 dark:hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+                </svg>
+                <svg id="moonIcon" class="w-6 h-6 text-gray-200 hidden dark:block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 01 8.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+                </svg>
+            </button>
+        </div>
 
         <div class="space-y-4">
             <div>
@@ -128,23 +214,23 @@
                     <button class="text-gray-600 hover:text-gray-900 focus:outline-none">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>
                     </button>
-                    <span id="likesCountPreview" class="text-sm font-semibold text-gray-800">1.2K</span>
+                    <span id="likesCountPreview" class="text-sm font-semibold text-gray-800">5.4M</span>
                 </div>
                 <!-- Comment Button and Count -->
                 <div class="flex items-center space-x-1">
                     <button class="text-gray-600 hover:text-gray-900 focus:outline-none">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" class="lucide lucide-message-circle"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/></svg>
                     </button>
-                    <span id="inlineCommentsCountPreview" class="text-sm font-semibold text-gray-800">57</span>
+                    <span id="inlineCommentsCountPreview" class="text-sm font-semibold text-gray-800">123.5K</span>
                 </div>
                 <!-- Share/DM Button and Count -->
                 <div class="flex items-center space-x-1">
                     <button class="text-gray-600 hover:text-gray-900 focus:outline-none">
-                        <svg width="24" height="24" viewBox="0 0 6.35 6.35" version="1.1" xml:space="preserve" fill="none" stroke="currentColor" strokeLinecap="butt" strokeLinejoin="miter">
+                        <svg width="24" height="24" viewBox="0 0 6.35 6.35" version="1.1" xml:space="preserve" fill="none" stroke="currentColor" stroke-linecap="butt" stroke-linejoin="miter">
                             <g id="layer1">
                                 <g id="g2" transform="matrix(1.6284876,-0.02587901,0.02481837,1.5617448,-103.19364,-267.2457)" style="stroke-width:0.08294313;stroke-dasharray:none">
-                                    <path style="fill:none;stroke:#000000;stroke-width:0.08294313;stroke-linecap:butt;stroke-linejoin:miter;stroke-dasharray:none;stroke-opacity:1" d="m 60.990929,172.78834 3.414101,0.0579 -1.735984,2.95117 -0.405061,-1.67812 z" id="path1" />
-                                    <path style="fill:none;stroke:#000000;stroke-width:0.08294313;stroke-linecap:butt;stroke-linejoin:miter;stroke-dasharray:none;stroke-opacity:1" d="m 62.155326,174.09016 2.209967,-1.25231" id="path2" />
+                                    <path style="fill:none;stroke-width:0.08294313;stroke-linecap:butt;stroke-linejoin:miter;stroke-dasharray:none;stroke-opacity:1" d="m 60.990929,172.78834 3.414101,0.0579 -1.735984,2.95117 -0.405061,-1.67812 z" id="path1" />
+                                    <path style="fill:none;stroke-width:0.08294313;stroke-linecap:butt;stroke-linejoin:miter;stroke-dasharray:none;stroke-opacity:1" d="m 62.155326,174.09016 2.209967,-1.25231" id="path2" />
                                 </g>
                             </g>
                         </svg>
@@ -159,21 +245,20 @@
         </div>
 
         <!-- Post Caption -->
-        <div class="px-3 pb-2 text-sm">
-            <span id="captionUsernamePreview" class="font-semibold mr-1">celebrity_extraordinaire</span>
-            <span id="captionTextPreview">So thrilled to share this amazing moment with all of you! Your support means the world! ✨ #blessed #viral #makingmovies</span>
+        <div class="px-3 pb-2 text-sm text-gray-900">
+            <span id="captionUsernamePreview" class="font-semibold mr-1">the_movie_star</span>
+            <span id="captionTextPreview">Unforgettable night at the premiere! So grateful for all the love and support. This film is going to be epic! 🎬 #premiere #blockbuster #hollywood</span>
         </div>
 
         <!-- View all comments -->
         <div class="px-3 pb-2 text-xs text-gray-500">
-            View all <span id="viewAllCommentsCountPreview">98,765</span> comments
+            View all <span id="viewAllCommentsCountPreview">123,456</span> comments
         </div>
 
         <!-- Time Posted -->
         <div class="px-3 pb-3 text-xs text-gray-400 uppercase">
-            <span id="timeAgoPreview">1 HOUR AGO</span>
+            <span id="timeAgoPreview">2 MINUTES AGO</span>
         </div>
-
     </div>
 
     <script>
@@ -190,6 +275,9 @@
             const inputTimeAgo = document.getElementById('inputTimeAgo');
             const inputBlueTick = document.getElementById('inputBlueTick');
             const generatePostBtn = document.getElementById('generatePostBtn');
+            const themeToggleBtn = document.getElementById('themeToggleBtn');
+            const sunIcon = document.getElementById('sunIcon');
+            const moonIcon = document.getElementById('moonIcon');
 
             // Get references to preview elements
             const usernamePreview = document.getElementById('usernamePreview');
@@ -216,12 +304,7 @@
                 captionTextPreview.textContent = inputCaption.value;
                 viewAllCommentsCountPreview.textContent = parseInt(inputComments.value).toLocaleString();
                 timeAgoPreview.textContent = inputTimeAgo.value.toUpperCase();
-
-                if (inputBlueTick.checked) {
-                    blueTickPreview.classList.remove('hidden');
-                } else {
-                    blueTickPreview.classList.add('hidden');
-                }
+                blueTickPreview.style.display = inputBlueTick.checked ? 'inline-block' : 'none';
             };
 
             // Helper function to format numbers (e.g., 1200 -> 1.2K)
@@ -255,6 +338,26 @@
                     reader.readAsDataURL(file);
                 }
             });
+
+            // Theme toggle functionality
+            themeToggleBtn.addEventListener('click', () => {
+                document.body.classList.toggle('dark');
+                // Save theme preference to localStorage
+                if (document.body.classList.contains('dark')) {
+                    localStorage.setItem('theme', 'dark');
+                    blueTickPreview.setAttribute('fill', '#3b82f6');
+                } else {
+                    localStorage.setItem('theme', 'light');
+                    blueTickPreview.setAttribute('fill', '#4299e1');
+                }
+            });
+
+            // Load theme preference from localStorage
+            if (localStorage.getItem('theme') === 'dark' || 
+                (!localStorage.getItem('theme') && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+                document.body.classList.add('dark');
+                blueTickPreview.setAttribute('fill', '#3b82f6');
+            }
 
             // Event listener for the Generate Post button
             generatePostBtn.addEventListener('click', updatePostPreview);
