--- a/x_customizer.html
+++ b/x_customizer.html
@@ -35,10 +35,10 @@
         }
         /* Dark theme styles */
         body.dark {
-            background-color: #15202b; /* Twitter-like dark background */
+            background-color: #ffffff; /* Twitter-like dark background */
         }
         body.dark .bg-white {
-            background-color: #1e2a3c; /* Darker panel background */
+            background-color: #1c1c1e; /* Darker panel background */
             border-color: #2f3b4c;
         }
         body.dark .bg-gray-100 {
