--- a/x_customizer.html
+++ b/x_customizer.html
@@ -35,7 +35,7 @@
         }
         /* Dark theme styles */
         body.dark {
-            background-color: #ffffff; /* Twitter-like dark background */
+            background-color: #eeeeee; /* Twitter-like dark background */
         }
         body.dark .bg-white {
             background-color: #1c1c1e; /* Darker panel background */
